Modernize Arrays.asList() to List.of() and System.arraycopy() to Arrays.copyOf()
Replace remaining Arrays.asList() calls with List.of() in plugin module.
Convert System.arraycopy() patterns to Arrays.copyOf() where the pattern
is a simple array resize (allocate, copy from 0, assign).

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>